new version, uuid and 1000 improvements!